--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
 
 header {
   /* your code */
+  display: flex;
+  flex-wrap: wrap;
+  
 }
 
 main {
@@ -34,6 +37,8 @@ main a {
 
 .dog-list-container {
   /* your code */
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .fluid-text {
